--- a/index.html
+++ b/index.html
@@ -517,7 +517,8 @@
 
       // Draw title and header
       doc.setFontSize(14);
-      doc.text('Asset Table', startX, currentY);
+      // PDF title changed to "Deviation Table"
+      doc.text('Deviation Table', startX, currentY);
       currentY += 10;
       drawTableHeader();
 
